    rather than being compiled into .py files statically.
  * If /etc/udev/rules.d/70-persistent-net.rules exists, copy it rather than
    generating /etc/iftab.

  [ Mario Limonciello ]
  * Break up the glade file into multiple pieces to make updates
    to single pages a lot easier.

  [ Nathan Collins ]
  * Fix typo in unionfs dirs= option generation (LP: #118742).

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 14 Jun 2007 13:27:26 -0400

ubiquity (1.5.3) gutsy; urgency=low

  [ Colin Watson ]
  * Drop into pdb.post_mortem on non-SyntaxError exceptions if the --pdb
    option is given and ubiquity is running from a terminal.
  * Work around hang on PS3 by stopping various non-essential processes
    first (LP: #106683).

  [ Evan Dandrea ]
  * Set the partition model after populating it in the KDE UI
    (LP: #118967).
  * Automatic update of included source packages: console-setup
    1.16ubuntu4, kboot-installer 0.0.1ubuntu3, partman-newworld
    18ubuntu1.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 11 Jun 2007 11:01:50 -0400

ubiquity (1.5.2) gutsy; urgency=low

  [ Evan Dandrea ]
  * Prevent mounted volumes icons from appearing on the desktop.
    (LP: #105531)
  * Make sure the summary question regex gets split properly.
  * Fix typo in base frontend get_summary_device stub.

  [ Colin Watson ]
  * Automatic update of included source packages: console-setup 1.16ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Jun 2007 09:03:20 +0100

ubiquity (1.5.1) gutsy; urgency=low

  * Install doc/README in the ubiquity binary package.
  * Update console-setup component for Lithuanian changes in console-setup
    1.16ubuntu1.
  * Remove stray references to ubiquity.settings.
  * Restore distribution() function used by bin/ubiquity, previously in
    ubiquity.misc.
  * Clean up some breakage from ubiquity.misc.ex -> ubiquity.misc.execute
    renaming.
  * Automatic update of included source packages: console-setup 1.16ubuntu2,